--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "http-proxy-middleware": "^2.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-owl-carousel": "^2.3.3",
     "react-quill": "^2.0.0",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^5.3.4",
